--- a/index.html
+++ b/index.html
@@ -6,46 +6,7 @@
     <title>Olive | Education</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        :root {
-            --primary-color: #4A90E2;
-            --secondary-color: #50E3C2;
-            --text-color: #333;
-            --bg-color: #F7F9FA;
-        }
-        body {
-            font-family: 'Poppins', sans-serif;
-            color: var(--text-color);
-            background-color: var(--bg-color);
-        }
-        .btn-primary {
-            background-color: var(--primary-color);
-            color: white;
-            transition: background-color 0.3s ease;
-        }
-        .btn-primary:hover {
-            background-color: #357ABD;
-        }
-        .text-primary {
-            color: var(--primary-color);
-        }
-        .bg-primary {
-            background-color: var(--primary-color);
-        }
-        .section-title {
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 1.5rem;
-            text-align: center;
-        }
-        .section-subtitle {
-            font-size: 1.2rem;
-            text-align: center;
-            max-width: 600px;
-            margin: 0 auto 4rem;
-            color: #666;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
