--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                                         <!-- QR Code Section -->
                                         <div class="flex flex-col md:flex-row items-center justify-between gap-6 mb-6">
                                             <div class="relative cursor-pointer qr-container">
-                                                <img src="QR code.png" alt="Donation QR Code" class="w-40 h-40 object-contain rounded-lg shadow-md" id="donationQR">
+                                                <img src="qr-code.png" alt="Donation QR Code" class="w-40 h-40 object-contain rounded-lg shadow-md" id="donationQR">
                                                 <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-20 rounded-lg opacity-0 hover:opacity-100 transition-opacity">
                                                     <i class="fas fa-search-plus text-white text-2xl"></i>
                                                 </div>
