Update Bank account and Status

--- a/index.html
+++ b/index.html
@@ -374,11 +374,13 @@
                                             <div class="grid md:grid-cols-2 gap-4 text-sm text-gray-600">
                                                 <div class="space-y-2">
                                                     <p><span class="font-medium">Bank:</span> Kasikorn Bank</p>
-                                                    <p><span class="font-medium">Account Name:</span> Olive Education Development Center</p>
+                                                    <p><span class="font-medium">Account Name:</span> MR . SOMCHAI - </p>
+                                                    <p><span class="font-medium">Branch:</span> Mae Sot</p>
                                                 </div>
                                                 <div class="space-y-2">
-                                                    <p><span class="font-medium">Account Number:</span> XXX-X-XXXXX-X</p>
-                                                    <p><span class="font-medium">Branch:</span> Mae Sot</p>
+                                                    <p><span class="font-medium">Account Number:</span> 123-8-46027-8</p>
+                                                    <p><span class="font-medium">SWIFT Code:</span> KASITHBK</p>
+                                                    <p><span class="font-medium">Bank Address:</span> 1st Floor, Tesco Lotus Building, 17 Sai Asia Road Tumbol Mae Sot , Amphoe Mae Sot , Tak 63110</p>
                                                 </div>
                                             </div>
                                         </div>
