--- a/index.html
+++ b/index.html
@@ -351,14 +351,13 @@
                                     <div class="bg-gray-50 p-6 rounded-lg">
                                         <!-- QR Code Section -->
                                         <div class="flex flex-col md:flex-row items-center justify-between gap-6 mb-6">
-                                            <div class="relative cursor-pointer qr-container">
-                                                <img src="qr-code.png" alt="Donation QR Code" class="w-40 h-40 object-contain rounded-lg shadow-md" id="donationQR">
-                                                <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-20 rounded-lg opacity-0 hover:opacity-100 transition-opacity">
-                                                    <i class="fas fa-search-plus text-white text-2xl"></i>
-                                                </div>
-                                            </div>
                                             <div class="text-center md:text-left">
                                                 <h5 class="font-semibold text-primary mb-4">Quick Payment</h5>
+                                                <!-- Add click functionality and modal for QR code -->
+                                                <div class="relative cursor-pointer" onclick="openQRModal()">
+                                                    <img src="assets/images/qr-code.png" alt="QR Code" class="w-48 h-48 object-contain hover:opacity-80 transition-opacity">
+                                                    <span class="text-xs text-gray-500 block mt-1">Click to enlarge</span>
+                                                </div>
                                                 <ol class="space-y-2 text-sm text-gray-600">
                                                     <li>1. Open your banking app</li>
                                                     <li>2. Scan this QR code</li>
@@ -477,6 +476,24 @@
     </footer>
 
     <script src="script.js"></script>
+    <script>
+        function openQRModal() {
+            document.getElementById('qrModal').classList.remove('hidden');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeQRModal() {
+            document.getElementById('qrModal').classList.add('hidden');
+            document.body.style.overflow = 'auto';
+        }
+
+        // Close modal when clicking outside
+        document.getElementById('qrModal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closeQRModal();
+            }
+        });
+    </script>
 
 </body>
 </html>
