directory update in image handling

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                                                 <h5 class="font-semibold text-primary mb-4">Quick Payment</h5>
                                                 <!-- Add click functionality and modal for QR code -->
                                                 <div class="relative cursor-pointer" onclick="openQRModal()">
-                                                    <img src="assets/images/qr-code.png" alt="QR Code" class="w-48 h-48 object-contain hover:opacity-80 transition-opacity">
+                                                    <img src="assets/qr-code.png" alt="QR Code" class="w-48 h-48 object-contain hover:opacity-80 transition-opacity">
                                                     <span class="text-xs text-gray-500 block mt-1">Click to enlarge</span>
                                                 </div>
                                                 <ol class="space-y-2 text-sm text-gray-600">
